--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "ember-font-awesome": "2.2.0",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-side-menu": "0.0.11",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
+  },
+  "dependencies": {
+    "ember-side-menu": "0.0.11"
   }
 }
