--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ember": "~2.9.0",
     "ember-cli-shims": "0.1.3",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "bulma": "0.1.2"
   }
 }
