--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "ember": "~2.9.0",
     "ember-cli-shims": "0.1.3",
     "font-awesome": "~4.5.0",
-    "bulma": "0.1.2"
+    "bulma": "0.1.2",
+    "emojione": "^2.2.6"
   }
 }
