--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "ember-font-awesome": "2.2.0",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-simple-auth": "1.1.0",
+    "ember-simple-auth-token": "1.2.0",
+    "ember-simple-form": "2.1.0",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   },
