--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.3",
     "font-awesome": "~4.5.0",
     "bulma": "0.1.2",
-    "emojione": "^2.2.6"
+    "emojione": "^2.2.6",
+    "leaflet": "^1.0.0"
   }
 }
