--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-data": "^2.9.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.2.0",
+    "ember-leaflet": "3.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
