--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "font-awesome": "~4.5.0",
     "bulma": "0.1.2",
     "emojione": "^2.2.6",
-    "leaflet": "^1.0.0"
+    "leaflet": "^1.0.0",
+    "blueimp-md5": "2.1.0"
   }
 }
