--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "final-project-etch",
   "dependencies": {
     "ember": "~2.9.0",
-    "ember-cli-shims": "0.1.3",
+    "ember-cli-shims": "~0.1.1",
     "font-awesome": "~4.5.0",
     "bulma": "0.1.2",
     "emojione": "^2.2.6",
