--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ember-simple-auth-token": "1.2.0",
     "ember-simple-form": "2.1.0",
     "ember-welcome-page": "^1.0.3",
+    "liquid-fire": "0.27.0",
     "loader.js": "^4.0.10"
   },
   "dependencies": {
