--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ember-ajax": "^2.4.1",
     "ember-bulma": "0.1.2",
     "ember-burger-menu": "0.2.0",
-    "ember-cli": "2.9.1",
+    "ember-cli": "^2.9.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
