--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
   },
   "dependencies": {
     "babel": "^6.23.0",
-    "ember-side-menu": "0.0.11"
+    "bower": "^1.8.4",
+    "ember-side-menu": "0.0.11",
+    "webpack": "^4.20.2",
+    "yarn": "^1.10.1"
   }
 }
