--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel": "^6.23.0",
     "bower": "^1.8.4",
     "ember-side-menu": "0.0.11",
+    "npm": "^6.4.1",
     "webpack": "^4.20.2",
     "yarn": "^1.10.1"
   }
